Thu Mar 15 00:41:47 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcalender.c gtk/gtkcombo.c gtk/gtkeditable.c
	gtk/gtkplug.c gtk/gtkradiobutton.c gtk/gtkvpaned.c:
	Patch from Darin Adler to fix unused variables
	warning. (But use gutter_size variable in 
	gtk_vpaned_button_press.) (#51835)

Wed Mar 14 23:38:23 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c (gdk_init_check): Fix missed equal_pos => option
	for --with-xinput=gxi. (Which is broken anyways, but
	oh well...)

	* gtk/gtkeditable.c (gtk_editable_get_event_time): Fix excess free
	in case where there is no current event.

	* gtk/gtkwindow.[ch]: Handle focus for the case of 
	PointerRoot (no window manager) by using algorithm taken 
	from xterm.

Fri Mar  9 22:32:32 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenushell.c (gtk_menu_shell_enter_notify): Only
	check the ignore_enter flag for the menu shell that
	the item is actually a child of, not for attached
	submenus. (#51536)

Fri Mar  2 12:35:40 2001  Owen Taylor  <otaylor@redhat.com>

	* Release 1.2.9

        * NEWS: Final update for 1.2.9
	 
	* INSTALL INSTALL.in: Add note about the movement of
	the include files.

Fri Mar  2 19:33:59 2001  Fatih Demir	<kabalak@gtranslator.org>

	* configure.in: Added tr to ALL_LINGUAS.

Thu Mar  1 04:35:51 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_class_init): Never make harmless
	warning fixes! :-(

Wed Feb 28 21:14:08 2001  Owen Taylor  <otaylor@redhat.com>

	* README.in INSTALL.in: Fix the .in files, add note
	about --with-native-locale.

	* */po/*: Line-number-creepage.

Wed Feb 28 19:10:43 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (real_remove_row): Patch from ChiDeok
	Hwang to move call to sync_selection() up a few lines
	to before the row list is modified, to fix crash when
	removing rows in the undo_selection list.

	(Test case provided by Daniel Elstner:

        http://mail.gnome.org/archives/gtk-list/2001-February/msg00359.html)
